tests/NormalTests/paczka1/small_fuzzy/79202561.err
Error in line 2: nZhPyZuYEF A536 315,8
Error in line 6: KIPbuBN7LB7 A632 81,4
Error in line 9: KIPbuBN7LB7 S244 23,9
